# JobScraper

./: .gitignore  README.md  build_log.txt  docker-compose.yml
.github/workflows/: backend_cd.yml  backend_ci.yml  frontend_cd.yml  frontend_ci.yml
.specify/memory/: constitution.md
backend/: .dockerignore  .gitignore  Dockerfile  pyproject.toml  requirements.txt  sql_app.db  test_sql_app.db
backend/src/: config.py  main.py
backend/src/api/: applications.py  auth.py  jobs.py  keywords.py
backend/src/middleware/: auth.py  metrics.py
backend/src/models/: database.py  job.py  job_application.py  keyword.py  user.py
backend/src/schemas/: job.py  job_application.py  user.py
backend/src/services/: application_service.py  auth_service.py  job_service.py  keyword_service.py  scraper.py  scraper_dice.py  scraper_indeed.py  scraper_linkedin.py
backend/tests/contract/: test_applications_delete.py  test_applications_get_all.py  test_applications_get_by_id.py  test_applications_post.py  test_applications_put.py  test_auth_login.py  test_auth_register.py  test_jobs.py
backend/tests/integration/: test_applications_crud.py  test_applications_filter.py  test_user_auth.py
backend/tests/performance/: test_api_performance.py
backend/tests/unit/: test_application_service.py  test_auth_service.py  test_database.py  test_job_application_model.py  test_job_model.py  test_job_service.py  test_keyword_model.py  test_scraping.py  test_user_model.py
frontend/: Dockerfile  jsconfig.json  nginx.conf  package-lock.json  package.json
frontend/src/: App.css  App.js  App.test.js  accessibility_guide.md  sharing_guide.md
frontend/src/components/: Dashboard.js
frontend/src/components/applications/: ApplicationFilter.js  ApplicationForm.js  ApplicationList.js
frontend/src/components/auth/: Login.js  Register.js
frontend/src/components/keywords/: KeywordManager.js
frontend/src/context/: AuthContext.js
frontend/src/services/: api.js  jobService.js  keywordService.js
frontend/src/tests/: AuthContext.test.js  Dashboard.test.js  Login.test.js
frontend/src/tests/e2e/: jobScrapingFlow.test.js
frontend/src/tests/integration/: jobManagement.test.js
specs/001-i-want-an/: plan.md  research.md  tasks.md
specs/001-i-want-an/contracts/: auth-login.md  auth-register.md  contract-tests.md
specs/001-job-application-tracker/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
specs/001-job-application-tracker/contracts/: applications-delete.md  applications-get-all.md  applications-get-by-id.md  applications-post.md  applications-put.md
specs/002-job-scraper-the/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-job-scraper-the/contracts/: jobs.yml
